--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <!-- 💅 Brand Selection Grid -->
   <section class="brand-grid">
     <div class="brand-card" onclick="loadBrand('glossier')">
-      <img src="images/brand-glossier.png" alt="Glossier" />
-      <span>Glossier</span>
+      <img src="images/all-logos.png" alt="all-logos" />
+      <span>All Logos</span>
     </div>
     <div class="brand-card" onclick="loadBrand('rhode')">
       <img src="images/brand-rhode.png" alt="Rhode" />
