--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <!-- 💅 Brand Selection Grid -->
   <section class="brand-grid">
-    <div class="brand-card" onclick="loadBrand('glossier')">
-      <img src="images/all-logos.png" alt="all-logos" />
-      <span>All Logos</span>
+    <div class="brand-card" onclick="loadBrand('Rare Beauty')">
+      <img src="images/rare-beauty-logo.png" alt="Rare Beauty" />
+      <span>Rare Beauty</span>
     </div>
     <div class="brand-card" onclick="loadBrand('rhode')">
       <img src="images/brand-rhode.png" alt="Rhode" />
