added all logos

--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
 
   <!-- 💅 Brand Selection Grid -->
   <section class="brand-grid">
-    <div class="brand-card" onclick="loadBrand('Rare Beauty')">
-      <img src="images/rare-beauty-logo.png" alt="Rare Beauty" />
+    <div class="brand-card" onclick="loadBrand('rare')">
+      <img src="images/rare-beauty-logo.png" alt="Rare" />
       <span>Rare Beauty</span>
     </div>
     <div class="brand-card" onclick="loadBrand('rhode')">
-      <img src="images/brand-rhode.png" alt="Rhode" />
+      <img src="images/rhode-logo.png" alt="Rhode" />
       <span>Rhode</span>
     </div>
     <div class="brand-card" onclick="loadBrand('fenty')">
-      <img src="images/brand-fenty.png" alt="Fenty" />
+      <img src="images/fenty-logo.png" alt="Fenty" />
       <span>Fenty</span>
     </div>
-    <!-- Add 3 more brands -->
+    <div class="brand-card" onclick="loadBrand('glossier')">
+        <img src="images/glossier-logo.png" alt="Glossier" />
+        <span>Glossier</span>
+      </div>
   </section>
 
   <!-- 🧴 Product Gallery (populated dynamically) -->
