all 6 brands present

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <div class="brand-card" onclick="loadBrand('glossier')">
         <img src="images/glossier-logo.png" alt="Glossier" />
       </div>
+    <div class="brand-card" onclick="loadBrand('urban')">
+        <img src="images/urban-logo.png" alt="Urban" />
+      </div>
+    <div class="brand-card" onclick="loadBrand('nars')">
+        <img src="images/nars-logo.png" alt="Nars" />
+      </div>
   </section>
 
   <!-- 🧴 Product Gallery (populated dynamically) -->
