--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 
   <!-- 💅 Brand Selection Grid -->
   <section class="brand-grid">
-    <div class="brand-card" onclick="loadBrand('rare')">
+    <a href="brand.html?brand=rare" class="brand-card">
       <img src="images/rare-beauty-logo.png" alt="Rare" />
-    </div>
-    <div class="brand-card" onclick="loadBrand('rhode')">
+      </a>
+    <a href="brand.html?brand=rhode" class="brand-card">
       <img src="images/rhode-logo.png" alt="Rhode" />
-    </div>
-    <div class="brand-card" onclick="loadBrand('fenty')">
+      </a>
+    <a href="brand.html?brand=fenty" class="brand-card">
       <img src="images/fenty-logo.png" alt="Fenty" />
-    </div>
-    <div class="brand-card" onclick="loadBrand('glossier')">
-        <img src="images/glossier-logo.png" alt="Glossier" />
-      </div>
-    <div class="brand-card" onclick="loadBrand('urban')">
-        <img src="images/urban-logo.png" alt="Urban" />
-      </div>
-    <div class="brand-card" onclick="loadBrand('nars')">
-        <img src="images/nars-logo.png" alt="Nars" />
-      </div>
+      </a>
+    <a href="brand.html?brand=glossier" class="brand-card">
+      <img src="images/glossier-logo.png" alt="Glossier" />
+      </a>
+    <a href="brand.html?brand=urban" class="brand-card">
+      <img src="images/urban-logo.png" alt="Urban" />
+      </a>
+    <a href="brand.html?brand=nars" class="brand-card">
+      <img src="images/nars-logo.png" alt="Nars" />
+      </a>
   </section>
 
   <!-- 🧴 Product Gallery (populated dynamically) -->
